vbnc/vbnc/tests/Errors/30506-1.vb
Imports System.Windows.Forms

Public Class Form1
    '       Inherits Form
    Shared Sub Main()

    End Sub
    Private Sub Form1_Load(ByVal sender As System.Object, ByVal e As System.EventArgs) Handles Main.Load

    End Sub
End Class